@@ -3,6 +3,8 @@ Changelog
 
 4.13-dev - (unreleased)
 -----------------------
+ * Bug fix: Fixed portal status message on @@sendAsNotification
+   [voineali #4706]
  * Bug fix: fixed reorder resources views [tiberich #4737]
 
 4.12 - (2012-01-03)
